# mousecast

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-exe.yml  ci.yml
packaging/: entry.py
src/mousecast/: __init__.py  __main__.py  auth.py  config.py  controller.py  gui.py  inject.py  mousehook.py  net.py  protocol.py  screen.py  winutil.py
src/omb/: __init__.py  __main__.py  broadcast.py  capture.py  config.py  delay.py  geometry.py  gui.py  net.py  protocol.py  wheelhook.py  winapi.py
tests/: test_auth.py  test_config.py  test_delay.py  test_geometry.py  test_imports.py  test_net.py  test_protocol.py  test_screen.py
tools/: build_exe.py  follower_probe.py  launch_game.py
