[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mousecast"
version = "0.1.0"
description = "Replicate one PC's mouse to many PCs on the local network, in real time, from a single controller."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "mousecast contributors" }]
keywords = ["mouse", "lan", "remote", "broadcast", "windows", "automation"]

# Pure core (screen/protocol/config) + asyncio net have no third-party deps.
# The Windows capture/inject layer needs pywin32; it is an optional extra so the
# tested core stays installable/importable everywhere (incl. CI on Linux).
dependencies = []

[project.optional-dependencies]
win = ["pywin32>=306"]
dev = ["pytest>=7.0"]

[project.scripts]
mousecast = "mousecast.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
