[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mousecast"
version = "0.1.0"
description = "Replicate one PC's mouse to many PCs on the local network, in real time, from a single controller."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "mousecast contributors" }]
keywords = ["mouse", "lan", "remote", "broadcast", "windows", "automation"]

# Zero runtime dependencies: pure stdlib + ctypes + tkinter. The Windows
# capture/inject layer uses ctypes directly (no pywin32), so there is nothing
# extra to install -- it just needs to run on Windows.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
build = ["pyinstaller>=6.0"]

[project.scripts]
mousecast = "mousecast.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
